# ROS2-T265-PX4-MAVROS

src/mavros_teste/: package.xml  setup.cfg  setup.py
src/mavros_teste/mavros_teste/: arm_drone.py
src/py_pubsub/: package.xml
src/py_pubsub/py_pubsub/: subscriber_member_function.py
