<?xml version="1.0"?>
<package format="3">
  <name>px4_t265_subscriber</name>
  <version>1.0.0</version>
  <description>This Package communicates a px4-based drone with a T265 Realsense camera.</description>
  <maintainer email="drone@todo.todo">drone</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependências de execução -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>  <!-- Adicionando MAVROS para comunicação -->

  <!-- Dependências de teste -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
